--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="icon" href="/logo.webp">
+    <meta name="description"
+      content="Ushbu veb sayt orqali shaxsiy tushumlaringiz hamda harajatlaringiz sarhisobini olib borishingiz mumkun." />
+    <meta property="og:title" content="Personal Tracking App (by Doppichi)" />
+    <meta property="og:description"
+      content="Ushbu veb sayt orqali shaxsiy tushumlaringiz hamda harajatlaringiz sarhisobini olib borishingiz mumkun." />
+    <meta property="og:url" content="https://asaxiy-task.vercel.app" />
+    <meta property="og:site_name" content="Doppi AI" />
+    <meta property="og:locale" content="uz_UZ" />
+    <meta property="og:image" content="https://i.postimg.cc/Lsrs5kBF/logo.webp" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:type" content="website" />
+  
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Personal Tracking App (by Doppichi)" />
+    <meta name="twitter:description" content="Ushbu veb sayt orqali shaxsiy tushumlaringiz hamda harajatlaringiz sarhisobini olib borishingiz mumkun." />
+    <meta name="twitter:image" content="https://i.postimg.cc/Lsrs5kBF/logo.webp" />
   </head>
   <body>
     <div id="root"></div>
